ingress/apple-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: apple-pod
  labels:
    app: apple
spec:
  containers:
    - name: apple-container
      image: dma8888/kubernetes/http-echo
      args:
        - "-text=apple"
