ingress/banana-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: banana-pod
  labels:
    app: banana
spec:
  containers:
    - name: banana-container
      image: dma8888/kubernetes/http-echo
      args:
        - "-text=banana"
