ingress/orange-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orange-deployment
  labels:
    app: orange
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orange
  template:
    metadata:
      labels:
        app: orange
    spec:
      containers:
      - name: orange-container
        image: dma8888/kubernetes/http-echo
        args:
          - "-text=orange"
