ingress/orange-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: orange-service
spec:
  selector:
    app: orange
  ports:
    - port: 5678 # Default port for image
