ingress/ingress_ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dma-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - ingress-nginx
    secretName: nginx-secret
  rules:
  - host: ingress-nginx
    http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 5678
        - path: /orange
          backend:
            serviceName: orange-service
            servicePort: 5678
        - path: /
          backend:
            serviceName: banana-service
            servicePort: 5678
        - path: /orange
          backend:
            serviceName: banana-service
            servicePort: 5678
